--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
- appdirs==1.4.4
+appdirs==1.4.4
 asgiref==3.5.2
 certifi==2020.12.5
 distlib==0.3.1
@@ -8,7 +8,7 @@ filelock==3.0.12
 gunicorn==20.1.0
 Pillow==9.2.0
 pipenv==2020.11.15
-psycopg2==2.9.3
+psycopg2-binary==2.9.3
 six==1.15.0
 sqlparse==0.4.2
 virtualenv==20.4.2
